完成工单；新拉取管网代码